<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Mental Math</string>
  <string name="app_author">Heinrich Küttler</string>
  <string name="bitcoin_address">13NFvoTuDdJSLYSLMJbWzBJDtYnpYLhVj1</string>
  <string name="preplounge_hattip">Inspired by <a href="https://www.preplounge.com">preplounge.com</a>.</string>
  <string name="github_link">Code at <a href="https://github.com/heiner/mathapp">github.com/heiner/mathapp</a>.</string>
  <string name="about_copied_bitcoin_address">Bitcoin address copied to clipboard</string>
  <string name="button_start_game">Start new game</string>
  <string name="title_game_activity">Game</string>
  <string name="title_about_activity">About</string>
  <string name="action_search">Search</string>
  <string name="action_about">About</string>
  <string name="answer">\?</string>
  <string name="exercise_start">1 − 1 = </string>
  <string name="answer_button">Go</string>
  <string name="total_questions_text">" question"</string>
  <string name="extra_seconds_text">" sec bonus"</string>
  <string name="seconds_per_answer_text">" sec⁄answer"</string>
  <string name="right_answers_text">" right answer"</string>
  <string name="wrong_answers_text">" wrong answer"</string>
  <string name="points_text">" point"</string>
  <string name="level_header">Difficulty level</string>
  <string name="operation_header">Mathematical Operation</string>
  <string name="easy">Easy</string>
  <string name="medium">Medium</string>
  <string name="hard">Hard</string>
  <string name="estimation">Estimation</string>
  <string name="plus">+</string>
  <string name="minus">−</string>
  <string name="times">×</string>
  <string name="divide">⁄</string>
  <string name="percent">%</string>
  <string name="random">Random</string>
  <string name="question_header">Question</string>
  <string name="answer_header">Solution</string>
  <string name="user_answer_header">Your answer</string>
</resources>
