<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
  <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_header"
        style="?android:attr/listSeparatorTextViewStyle"
        />
  <RadioGroup
      android:id="@+id/levels_radio_group"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_alignLeft="@+id/textView1"
      android:layout_below="@+id/textView1"
      android:checkedButton="@+id/radio_easy"
      >
    <RadioButton android:id="@id/radio_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/easy"
        android:onClick="setLevel"
        />
    <RadioButton android:id="@+id/radio_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/medium"
        android:onClick="setLevel"
        />
    <RadioButton android:id="@+id/radio_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hard"
        android:onClick="setLevel"
        />
    <RadioButton android:id="@+id/radio_estimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/estimation"
        android:onClick="setLevel"
        />
  </RadioGroup>

  <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView1"
        android:layout_below="@id/levels_radio_group"
        android:text="@string/operation_header"
        style="?android:attr/listSeparatorTextViewStyle"
        />

  <RadioGroup
      android:id="@+id/operations_radio_group"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_alignLeft="@+id/textView1"
      android:layout_below="@+id/textView2"
      android:checkedButton="@+id/radio_random"
      >
    <RadioButton android:id="@+id/radio_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/plus"
        android:onClick="setMode"
        />
    <RadioButton android:id="@+id/radio_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/minus"
        android:onClick="setMode"
        />
    <RadioButton android:id="@+id/radio_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/times"
        android:onClick="setMode"
        />
    <RadioButton android:id="@+id/radio_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/divide"
        android:onClick="setMode"
        />
    <RadioButton android:id="@+id/radio_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/percent"
        android:onClick="setMode"
        />
    <RadioButton android:id="@id/radio_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/random"
        android:onClick="setMode"
        />
  </RadioGroup>

  <Button
      android:id="@+id/button_start_game"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignRight="@id/textView1"
      android:layout_below="@id/operations_radio_group"
      android:layout_marginTop="@dimen/vertical_distance_start_button"
      android:text="@string/button_start_game"
      android:onClick="startGame"
      android:drawableRight="@drawable/ic_action_send_now"
      android:tint="@color/black_tint"
      android:background="@android:color/transparent"
      android:textStyle="bold"
      />
</RelativeLayout>
