<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="00:00"
      android:id="@+id/timer_textview"
      android:layout_margin="10dp"
      android:layout_gravity="right"
      android:gravity="center"
      android:textSize="40dp"
      android:fontFamily="sans-serif-thin"
      />
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="horizontal" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_start"
        android:id="@+id/exercise_textview"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="40dp"
        android:fontFamily="sans-serif"
      />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer_edittext"
        android:hint="@string/answer"
        android:inputType="number"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_button"
        />
  </LinearLayout>
</LinearLayout>
